--- a/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
+++ b/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
@@ -79,6 +79,38 @@
                             </div>
                         </div>
 
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="form-label">Select Bank<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                @Html.DropDownListFor(model => model.BankId, new SelectList(Model.BankList.OrderBy(order => order.Text), "Value", "Text"), "==Select Bank==", new { id = "ddlBankId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                @Html.ValidationMessageFor(model => model.BankId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="form-label">Select Branch<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                @Html.DropDownListFor(model => model.BankBranchId, new SelectList(Model.BankBranchList.OrderBy(order => order.Text), "Value", "Text"), "==Select Branch==", new { id = "ddlBankBranchId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                @Html.ValidationMessageFor(model => model.BankBranchId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="form-label">Account Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                @Html.DropDownListFor(model => model.BankAccountInfoId, new SelectList(Model.AccountNoList.OrderBy(order => order.Text), "Value", "Text"), "==Select Account No==", new { id = "ddlBankAccountInfoId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                @Html.ValidationMessageFor(model => model.BankAccountInfoId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="form-label">Cheque Book<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                @Html.DropDownListFor(model => model.ChequeBookId, Model.ChequeBookList as SelectList, "==Select Cheque Book==", new { id = "ddlCheqeBookId", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
+                                @Html.ValidationMessageFor(model => model.ChequeBookId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
                         <div class="col-md-4">
                             <div class="form-group">
                                 <div class="form-group">
@@ -109,24 +141,17 @@
 
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label class="form-label">Select Cheque Book<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                @Html.DropDownListFor(model => model.ChequeBookId, Model.RegisterForList as SelectList, "==Cheque Book==", new { id = "ddlCheqeBookId", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
-                                @Html.ValidationMessageFor(model => model.ChequeBookId, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="form-group">
                                 <label class="form-label">Cheque No<sup class="text-danger" title="Required">*</sup></label>
-                                @Html.TextBoxFor(model => model.ChequeNo, new { id = "txtChequeNo", @class = "form-control", @placeholder = "Cheque no", required = "true" })
+                                @Html.TextBoxFor(model => model.ChequeNo, new { id = "txtChequeNo", @class = "form-control", @placeholder = "Cheque no", required = "true", @readonly = "true" })
                                 @Html.ValidationMessageFor(model => model.ChequeNo, "", new { id = "nameExist", @class = "text-danger" })
+                                <small class="text-danger" id="message"></small>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="form-label">Amount<sup class="text-danger" title="Required">*</sup></label>
-                                @Html.TextBoxFor(model => model.Amount, new { id = "txtAmount", @class = "form-control", @placeholder = "Amount", required = "true" })
+                                @Html.TextBoxFor(model => model.Amount, new { id = "txtAmount", @class = "form-control", @placeholder = "Amount", required = "true", @readonly = "true" })
                                 @Html.ValidationMessageFor(model => model.Amount, "", new { id = "nameExist", @class = "text-danger" })
                             </div>
                         </div>
@@ -427,6 +452,127 @@
                 $('#inputRegisterFor').removeClass('col-md-3').addClass('col-md-4');
                 $('#inputProject').removeClass('col-md-3').addClass('col-md-4');
                 $('#inputSupplier').removeClass('col-md-3').addClass('col-md-4');
+            }
+        });
+
+        $('#ddlBankId').on('change', function (event) {
+            var bankId = $("#ddlBankId option:selected").val();
+            var showBarnchList = $("#ddlBankBranchId");
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetBranchBybankId",
+                dataType: "json",
+                data: { bankId: bankId },
+                success: function (data) {
+                    showBarnchList.empty();
+                    showBarnchList.append("<option selected disabled>==Select Branch==</option>");
+                    $.each(data, function (index, item) {
+                        showBarnchList.append($('<option>', {
+                            value: item.BranchId,
+                            text: item.BranchName
+                        }));
+                    });
+                    if (isEdited) {
+                        $('#ddlBankBranchId').val(bankBranchId).trigger('change');
+                    }
+                }
+            });
+        });
+
+        $('#ddlBankBranchId').on('change', function (event) {
+            var bankId = $("#ddlBankId option:selected").val();
+            var bankBranchId = $("#ddlBankBranchId option:selected").val();
+            var showAccountList = $("#ddlBankAccountInfoId");
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetAccountNoByBankBranchId",
+                dataType: "json",
+                data: { bankId: bankId, bankBranchId: bankBranchId },
+                success: function (data) {
+                    showAccountList.empty();
+                    showAccountList.append("<option selected disabled>==Select Account No==</option>");
+                    $.each(data, function (index, item) {
+                        showAccountList.append($('<option>', {
+                            value: item.BankAccountInfoId,
+                            text: item.AccountNo
+                        }));
+                    });
+                    if (isEdited) {
+                        $('#ddlBankAccountInfoId').val(bankInfoId).trigger('change');
+                    }
+                }
+            });
+        });
+
+        $('#ddlBankAccountInfoId').on('change', function (event) {
+            var bankAccountInfoId = $("#ddlBankAccountInfoId option:selected").val();
+            var showChequeBookList = $("#ddlCheqeBookId");
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetChequeBookListByAccountInfo",
+                dataType: "json",
+                data: { bankAccountInfoId: bankAccountInfoId },
+                success: function (data) {
+                    showChequeBookList.empty();
+                    showChequeBookList.append("<option selected disabled>==Select Cheque Book==</option>");
+                    $.each(data, function (index, item) {
+                        showChequeBookList.append($('<option>', {
+                            value: item.ChequeBookId,
+                            text: item.ChequeBookNo
+                        }));
+                    });
+                }
+            });
+        });
+
+        $('#ddlCheqeBookId').on('change', function (event) {
+            var chequeBookId = $("#ddlCheqeBookId option:selected").val();
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetChequeBookInfoById",
+                dataType: "json",
+                data: { chequeBookId: chequeBookId },
+                success: function (data) {
+
+
+                    if (data.UsedBookPage != data.TotalBookPage || data.UsedBookPage < data.TotalBookPage) {
+                        var predictNextPage = data.UsedBookPage - 1;
+                        var nextPage = predictNextPage;
+
+                        if (nextPage <= data.BookLastPageNumber) {
+                            $('#txtChequeNo').val(data.BookFirstPageNumber + nextPage);
+                        }
+
+                        $('#message').text("");
+                    }
+                    else {
+                        $('#txtChequeNo').val(0);
+                        $('#message').text("No more page here, Try with another book!");
+                    }
+                }
+            });
+        });
+
+        $('#ddlRequisitionId').on('change', function (event) {
+            var requisitionId = $("#ddlRequisitionId option:selected").val();
+            $.ajax({
+                type: "GET",
+                url: "/BillRequisition/GetTotalAmountByRequisitionId",
+                dataType: "json",
+                data: { requisitionId: requisitionId },
+                success: function (data) {
+                    $('#txtAmount').val(data.toFixed(2));
+                }
+            });
+        });
+
+        $('#ddlRegisterFor').on('change', function (event) {
+            var registerFor = $("#ddlRegisterFor option:selected").val();
+            if (registerFor == @((int)KGERP.Utility.EnumChequeRegisterFor.Requisition)) {
+                $('#txtAmount').prop('readonly', true);
+            }
+            else {
+                $('#txtAmount').prop('readonly', false);
             }
         });
 
